--- a/html/dominionindex.html
+++ b/html/dominionindex.html
@@ -14,6 +14,8 @@
 <input type="button" id="spelregelsKnop" class="kleineKnop" value="?">
 <div id="spelRegels">
     <input type="button" id="volgendePagina" class="kleineKnop" value=">>">
+    <input type="button" id="vorigePagina" class="kleineKnop" value="<<">
+    <input type="button" id="sluitSpelregels" class="kleineKnop" value="X">
     <ul class="carousel">
 
     </ul>
@@ -25,7 +27,7 @@
     <input type="submit" class="groteKnop" id="spelen" value="Spelen">
 
     <input type="button" class="groteKnop" value="Aflsuiten">
-    </form>
+</form>
 
 <form method="post" class="hide" id="naamgeving">
     <input type="button" id="vorige" value="<< vorige">
@@ -42,9 +44,9 @@
         <input type="submit" id="speelSpel" class="startp2" value="Spelen" name="jaknop">
     </div>
 </form>
-</form>
 
-    <script type="text/javascript" src="lib/js/jquery-2.2.3.min.js"></script>
-    <script type="text/javascript" src="lib/js/script.js"></script>
+
+<script type="text/javascript" src="lib/js/jquery-2.2.3.min.js"></script>
+<script type="text/javascript" src="lib/js/script.js"></script>
 </body>
 </html>
