--- a/html/scorepagina.html
+++ b/html/scorepagina.html
@@ -7,11 +7,15 @@
     <link rel="stylesheet" href="lib/css/styleStart.css"/>
 </head>
 <body>
-<h3>Spelers</h3> <h3>punten</h3>
+<h1 class="scoretitel">Game over</h1>
+<ul class="spelerslijst">Spelers</ul>
+<ul>punten</ul>
 <form>
-    <button formmethod="get" formaction="Dominionindex.php"  type="submit" class="startp2">Opnieuwspelen</button>
-    -        <button type="submit" class="startp2">Doorgaan</button>
-    +        <button formmethod="get" formaction="Dominionindex.php" type="submit" class="startp2">Doorgaan</button>
+    <input type="button" class="scorebutt" value="Opnieuw spelen">
+    <input type="button" class="scorebutt" value="Doorgaan">
+
+
+
 </form>
 </body>
 </html>
