--- a/html/gamepagina.html
+++ b/html/gamepagina.html
@@ -8,21 +8,79 @@
 </head>
 <body>
 <div id="main">
-<div class="overwinningskaarten">
-    <img src="images/kaarten/overwinningskaarten/province.png" alt="province" title="province"/>
-    <img src="images/kaarten/overwinningskaarten/duchy.jpg" alt="duchy" title="duchy::"/>
-    <img src="images/kaarten/overwinningskaarten/estate.jpg" alt="estate" title="estate"/>
-</div>
 
-<div class="geldcurse">
-    <img src="images/kaarten/geldEnCursekaarten/gold.jpg" alt="gold" title="gold">
-    <img src="images/kaarten/geldEnCursekaarten/silver.jpg" alt="silver" title="silver">
-    <img src="images/kaarten/geldEnCursekaarten/copper.jpg" alt="copper" title="copper">
-    <img src="images/kaarten/geldEnCursekaarten/curse.jpg" alt="curse" title="curse">
-</div>
 
-    <img src="images/dank.png" id="dank" alt="dank" title="dank">
+    <div class="overwinningskaarten">
+        <img src="images/kaarten/overwinningskaarten/province.png" alt="province" title="province"/>
+        <img src="images/kaarten/overwinningskaarten/duchy.jpg" alt="duchy" title="duchy::"/>
+        <img src="images/kaarten/overwinningskaarten/estate.jpg" alt="estate" title="estate"/>
     </div>
+
+    <div class="actiekaarten">
+        <div id="EersteRij">
+            <img src="images/kaarten/actiekaarten/avonturier.jpg" alt="avonturier" title="avonturier"/>
+            <img src="images/kaarten/actiekaarten/bibliotheek.jpg" alt="avonturier" title="avonturier"/>
+            <img src="images/kaarten/actiekaarten/bureaucraat.jpg" alt="avonturier" title="avonturier"/>
+            <img src="images/kaarten/actiekaarten/dief.jpg" alt="avonturier" title="avonturier"/>
+            <img src="images/kaarten/actiekaarten/dorp.jpg" alt="avonturier" title="avonturier"/>
+
+        </div>
+        <div id="TweedeRij">
+            <img src="images/kaarten/actiekaarten/feest.jpg" alt="avonturier" title="avonturier"/>
+            <img src="images/kaarten/actiekaarten/festival.jpg" alt="avonturier" title="avonturier"/>
+            <img src="images/kaarten/actiekaarten/geldverlener.jpg" alt="avonturier" title="avonturier"/>
+            <img src="images/kaarten/actiekaarten/gracht.jpg" alt="avonturier" title="avonturier"/>
+            <img src="images/kaarten/actiekaarten/houthakker.jpg" alt="avonturier" title="avonturier"/>
+
+        </div>
+
+    </div>
+
+    <div id="buttons">
+        <button type="button">Speel Kaarten</button>
+        <button type="button">Eindig je beurt</button>
+    </div>
+    <div id="abc">
+        <ul>
+            <li>|ACTIES: 1</li>
+            <li>|BUYS: 2</li>
+            <li>|GELD: 3</li>
+        </ul>
+
+    </div>
+    <div class="geldcurse">
+        <img src="images/kaarten/geldkaarten/gold.jpg" alt="gold" title="gold">
+        <img src="images/kaarten/geldkaarten/silver.jpg" alt="silver" title="silver">
+        <img src="images/kaarten/geldkaarten/copper.jpg" alt="copper" title="copper">
+        <img src="images/kaarten/overwinningskaarten/curse.jpg" alt="curse" title="curse">
+    </div>
+    <div id="speler">
+        <ul>
+            <li><img src="images/dank.png" id="dank" alt="dank" title="dank"></li>
+            <li>Speler 1</li>
+
+        </ul>
+
+
+    </div>
+</div>
+
+<div class="hand">
+    <img src="images/kaarten/geldkaarten/copper.jpg" alt="copper" title="copper">
+    <img src="images/kaarten/geldkaarten/copper.jpg" alt="copper" title="copper">
+    <img src="images/kaarten/geldkaarten/copper.jpg" alt="copper" title="copper">
+    <img src="images/kaarten/overwinningskaarten/estate.jpg" alt="estate" title="estate"/>
+    <img src="images/kaarten/geldkaarten/copper.jpg" alt="copper" title="copper">
+
+
+</div>
+
+
+</body>
+</html>
+
+
+
 </body>
 </html>
 
