--- a/html/scorepagina.html
+++ b/html/scorepagina.html
@@ -8,11 +8,31 @@
 </head>
 <body>
 <h1 class="scoretitel">Game over</h1>
-<ul class="spelerslijst">Spelers</ul>
-<ul>punten</ul>
+<ul>
+    <li class="veld">Spelers</li>
+    <li class="veld">Province</li>
+    <li class="veld">Duchy</li>
+    <li class="veld">Estate</li>
+    <li class="veld">Vloek</li>
+    <li class="veld">Tuin</li>
+    <li class="veld">Punten</li>
+</ul>
+<ul>
+    <li>Renzie</li>
+    <li>Yentle</li>
+    <li>Laurens</li>
+    <li>Niels</li>
+</ul>
+
+
+</ul>
 <form>
-    <input type="button" class="scorebutt" value="Opnieuw spelen">
-    <input type="button" class="scorebutt" value="Doorgaan">
+    <!--<input type="button" class="scorebutt" value="Opnieuw spelen">-->
+    <div id="endgame">
+    <a class="startp2 scorebutt"  href="gamepagina.html">Opnieuw spelen</a>
+    <a class="startp2 scorebutt" href="dominionindex.html">Doorgaan</a>
+        </div>
+   <!-- <input type="button" class="scorebutt" value="Doorgaan">-->
 
 
 
