--- a/html/gamepagina.html
+++ b/html/gamepagina.html
@@ -16,6 +16,18 @@
         <img src="images/kaarten/overwinningskaarten/estate.jpg" alt="estate" title="estate"/>
     </div>
 
+
+    <div class="stapel">
+        <ul>
+            <li>
+                <img src="images/kaarten/actiekaarten/dief.jpg" alt="avonturier" title="avonturier"/>
+            </li>
+            <li>
+                <img src="images/kaarten/achterkant.jpg" alt="avonturier" title="avonturier"/>
+            </li>
+        </ul>
+    </div>
+
     <div class="actiekaarten">
         <div id="EersteRij">
             <img src="images/kaarten/actiekaarten/avonturier.jpg" alt="avonturier" title="avonturier"/>
@@ -39,6 +51,9 @@
     <div id="buttons">
         <button type="button">Speel Kaarten</button>
         <button type="button">Eindig je beurt</button>
+    </div>
+    <div id="log">
+        <h2>Een cursekaart werd toegevoegd aan je deck</h2>
     </div>
     <div id="abc">
         <ul>
@@ -74,11 +89,6 @@
 
 
 </div>
-
-
-</body>
-</html>
-
 
 
 </body>
