province is now jpg
images nu in lib instead of assets

--- a/html/gamepagina.html
+++ b/html/gamepagina.html
@@ -3,53 +3,53 @@
 <head>
     <title>Dominion</title>
     <meta name="author" content="Laurens Visser"/>
-    <link rel="stylesheet" type="text/css" href="assets/css/reset.css"/>
-    <link rel="stylesheet" href="assets/css/screen.css" type="text/css"/>
+    <link rel="stylesheet" type="text/css" href="lib/css/reset.css"/>
+    <link rel="stylesheet" href="lib/css/styleGame.css" type="text/css"/>
 </head>
 <body>
 <div id="main">
 
 
     <div class="overwinningskaarten">
-        <img src="images/kaarten/overwinningskaarten/province.png" alt="province" title="province"/>
-        <img src="images/kaarten/overwinningskaarten/duchy.jpg" alt="duchy" title="duchy::"/>
-        <img src="images/kaarten/overwinningskaarten/estate.jpg" alt="estate" title="estate"/>
+        <img src="lib/images/kaarten/overwinningskaarten/province.jpg" alt="province" title="province"/>
+        <img src="lib/images/kaarten/overwinningskaarten/duchy.jpg" alt="duchy" title="duchy::"/>
+        <img src="lib/images/kaarten/overwinningskaarten/estate.jpg" alt="estate" title="estate"/>
     </div>
 
 
     <div class="stapel">
         <ul>
             <li>
-                <img src="images/kaarten/actiekaarten/dief.jpg" alt="avonturier" title="avonturier"/>
+                <img src="lib/images/kaarten/actiekaarten/dief.jpg" alt="avonturier" title="avonturier"/>
             </li>
             <li>
-                <img src="images/kaarten/achterkant.jpg" alt="avonturier" title="avonturier"/>
+                <img src="lib/images/kaarten/achterkant.jpg" alt="avonturier" title="avonturier"/>
             </li>
         </ul>
     </div>
 
     <div class="actiekaarten">
         <div id="EersteRij">
-            <img src="images/kaarten/actiekaarten/avonturier.jpg" alt="avonturier" title="avonturier"/>
-            <img src="images/kaarten/actiekaarten/bibliotheek.jpg" alt="avonturier" title="avonturier"/>
-            <img src="images/kaarten/actiekaarten/bureaucraat.jpg" alt="avonturier" title="avonturier"/>
-            <img src="images/kaarten/actiekaarten/dief.jpg" alt="avonturier" title="avonturier"/>
-            <img src="images/kaarten/actiekaarten/dorp.jpg" alt="avonturier" title="avonturier"/>
+            <img src="lib/images/kaarten/actiekaarten/avonturier.jpg" alt="avonturier" title="avonturier"/>
+            <img src="lib/images/kaarten/actiekaarten/bibliotheek.jpg" alt="avonturier" title="avonturier"/>
+            <img src="lib/images/kaarten/actiekaarten/bureaucraat.jpg" alt="avonturier" title="avonturier"/>
+            <img src="lib/images/kaarten/actiekaarten/dief.jpg" alt="avonturier" title="avonturier"/>
+            <img src="lib/images/kaarten/actiekaarten/dorp.jpg" alt="avonturier" title="avonturier"/>
 
         </div>
         <div id="TweedeRij">
-            <img src="images/kaarten/actiekaarten/feest.jpg" alt="avonturier" title="avonturier"/>
-            <img src="images/kaarten/actiekaarten/festival.jpg" alt="avonturier" title="avonturier"/>
-            <img src="images/kaarten/actiekaarten/geldverlener.jpg" alt="avonturier" title="avonturier"/>
-            <img src="images/kaarten/actiekaarten/gracht.jpg" alt="avonturier" title="avonturier"/>
-            <img src="images/kaarten/actiekaarten/houthakker.jpg" alt="avonturier" title="avonturier"/>
+            <img src="lib/images/kaarten/actiekaarten/feest.jpg" alt="avonturier" title="avonturier"/>
+            <img src="lib/images/kaarten/actiekaarten/festival.jpg" alt="avonturier" title="avonturier"/>
+            <img src="lib/images/kaarten/actiekaarten/geldverlener.jpg" alt="avonturier" title="avonturier"/>
+            <img src="lib/images/kaarten/actiekaarten/gracht.jpg" alt="avonturier" title="avonturier"/>
+            <img src="lib/images/kaarten/actiekaarten/houthakker.jpg" alt="avonturier" title="avonturier"/>
 
         </div>
 
     </div>
 
     <div id="buttons">
-        <button type="button">Speel Kaarten</button>
+        <button type="button">Gooi je geldkaarten</button>
         <button type="button">Eindig je beurt</button>
     </div>
     <div id="log">
@@ -64,28 +64,25 @@
 
     </div>
     <div class="geldcurse">
-        <img src="images/kaarten/geldkaarten/gold.jpg" alt="gold" title="gold">
-        <img src="images/kaarten/geldkaarten/silver.jpg" alt="silver" title="silver">
-        <img src="images/kaarten/geldkaarten/copper.jpg" alt="copper" title="copper">
-        <img src="images/kaarten/overwinningskaarten/curse.jpg" alt="curse" title="curse">
+        <img src="lib/images/kaarten/geldkaarten/gold.jpg" alt="gold" title="gold">
+        <img src="lib/images/kaarten/geldkaarten/silver.jpg" alt="silver" title="silver">
+        <img src="lib/images/kaarten/geldkaarten/copper.jpg" alt="copper" title="copper">
+        <img src="lib/images/kaarten/overwinningskaarten/curse.jpg" alt="curse" title="curse">
     </div>
     <div id="speler">
         <ul>
-            <li><img src="images/dank.png" id="dank" alt="dank" title="dank"></li>
+            <li><img src="lib/images/dank.png" id="dank" alt="dank" title="dank"></li>
             <li>Speler 1</li>
-
         </ul>
-
-
     </div>
 </div>
 
 <div class="hand">
-    <img src="images/kaarten/geldkaarten/copper.jpg" alt="copper" title="copper">
-    <img src="images/kaarten/geldkaarten/copper.jpg" alt="copper" title="copper">
-    <img src="images/kaarten/geldkaarten/copper.jpg" alt="copper" title="copper">
-    <img src="images/kaarten/overwinningskaarten/estate.jpg" alt="estate" title="estate"/>
-    <img src="images/kaarten/geldkaarten/copper.jpg" alt="copper" title="copper">
+    <img src="lib/images/kaarten/geldkaarten/copper.jpg" alt="copper" title="copper">
+    <img src="lib/images/kaarten/geldkaarten/copper.jpg" alt="copper" title="copper">
+    <img src="lib/images/kaarten/geldkaarten/copper.jpg" alt="copper" title="copper">
+    <img src="lib/images/kaarten/overwinningskaarten/estate.jpg" alt="estate" title="estate"/>
+    <img src="lib/images/kaarten/geldkaarten/copper.jpg" alt="copper" title="copper">
 
 
 </div>
@@ -93,5 +90,3 @@
 
 </body>
 </html>
-
-
