Yentle -> Yentl, you bastards

--- a/html/scorepagina.html
+++ b/html/scorepagina.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Dominion</title>
     <link rel="stylesheet" href="lib/css/reset.css"/>
     <link rel="stylesheet" href="lib/css/styleStart.css"/>
 </head>
@@ -19,20 +19,20 @@
 </ul>
 <ul>
     <li>Renzie</li>
-    <li>Yentle</li>
+    <li>Yentl</li>
     <li>Laurens</li>
     <li>Niels</li>
 </ul>
 
 
-</ul>
+
 <form>
     <!--<input type="button" class="scorebutt" value="Opnieuw spelen">-->
     <div id="endgame">
-    <a class="startp2 scorebutt"  href="gamepagina.html">Opnieuw spelen</a>
-    <a class="startp2 scorebutt" href="dominionindex.html">Doorgaan</a>
-        </div>
-   <!-- <input type="button" class="scorebutt" value="Doorgaan">-->
+        <a class="startp2 scorebutt"  href="Gamepagina.html">Opnieuw spelen</a>
+        <a class="startp2 scorebutt" href="dominionIndex.html">Doorgaan</a>
+    </div>
+    <!-- <input type="button" class="scorebutt" value="Doorgaan">-->
 
 
 
