--- a/html/scorepagina.html
+++ b/html/scorepagina.html
@@ -30,7 +30,7 @@
     <!--<input type="button" class="scorebutt" value="Opnieuw spelen">-->
     <div id="endgame">
         <a class="startp2 scorebutt"  href="Gamepagina.html">Opnieuw spelen</a>
-        <a class="startp2 scorebutt" href="dominionIndex.html">Doorgaan</a>
+        <a class="startp2 scorebutt" href="index.html">Doorgaan</a>
     </div>
     <!-- <input type="button" class="scorebutt" value="Doorgaan">-->
 
