--- a/html/index.html
+++ b/html/index.html
@@ -29,7 +29,7 @@
     <input type="button" class="groteKnop" value="Aflsuiten">
 </form>
 
-<form method="post" class="hide" id="naamgeving">
+<form action="Beginnen" method="get" class="hide" id="naamgeving">
     <input type="button" id="vorige" value="<< vorige">
     <h3>Kies uw naam</h3>
 
@@ -42,7 +42,7 @@
 
     <div>
         <!--<input type="submit" id="speelSpel" class="startp2" value="Spelen" name="jaknop">-->
-        <a class="startp2" href="Gamepagina.html">Spelen</a>
+        <input type="submit" value="Beginnen">
     </div>
 </form>
 
