--- a/html/index.html
+++ b/html/index.html
@@ -29,7 +29,7 @@
     <input type="button" class="groteKnop" value="Aflsuiten">
 </form>
 
-<form action="Beginnen" method="get" class="hide" id="naamgeving">
+<form method="post" class="hide" id="naamgeving">
     <input type="button" id="vorige" value="<< vorige">
     <h3>Kies uw naam</h3>
 
@@ -42,10 +42,10 @@
 
     <div>
         <!--<input type="submit" id="speelSpel" class="startp2" value="Spelen" name="jaknop">-->
-        <input type="submit" value="Beginnen">
+ -        <a class="startp2" href="Gamepagina.html">Spelen</a>
     </div>
 </form>
-
+<input type="button" class="groteKnop" value="Aflsuiten">
 
 <script type="text/javascript" src="lib/js/jquery-2.2.3.min.js"></script>
 <script type="text/javascript" src="lib/js/script.js"></script>
