--- a/html/gamepagina.html
+++ b/html/gamepagina.html
@@ -7,55 +7,49 @@
     <link rel="stylesheet" href="lib/css/styleGame.css" type="text/css"/>
 </head>
 <body>
-<div id="main">
+<div id="wrapper">
 
 
-    <div class="overwinningskaarten">
-        <img src="lib/images/kaarten/overwinningskaarten/province.jpg" alt="province" title="province"/>
-        <img src="lib/images/kaarten/overwinningskaarten/duchy.jpg" alt="duchy" title="duchy::"/>
-        <img src="lib/images/kaarten/overwinningskaarten/estate.jpg" alt="estate" title="estate"/>
-    </div>
+    <ul class="overwinningskaarten">
+        <li><img src="lib/images/kaarten/overwinningskaarten/provincePS.jpg" alt="province" title="province"/></li>
+        <li><img src="lib/images/kaarten/overwinningskaarten/duchyPS.jpg" alt="duchy" title="duchy::"/></li>
+        <li><img src="lib/images/kaarten/overwinningskaarten/estatePS.jpg" alt="estate" title="estate"/></li>
+    </ul>
 
 
-    <div class="stapel">
-        <ul>
-            <li>
-                <img src="lib/images/kaarten/actiekaarten/dief.jpg" alt="avonturier" title="avonturier"/>
-            </li>
-            <li>
-                <img src="lib/images/kaarten/achterkant.jpg" alt="avonturier" title="avonturier"/>
-            </li>
+    <ul class="stapel">
+        <li><img src="lib/images/kaarten/actiekaarten/dief.jpg" alt="avonturier" title="avonturier"/></li>
+        <li><img src="lib/images/kaarten/achterkant.jpg" alt="avonturier" title="avonturier"/></li>
+    </ul>
+
+
+        <ul class="actiekaarten">
+            <li><img src="lib/images/kaarten/actiekaarten/avonturier.jpg" alt="avonturier" title="avonturier"/></li>
+            <li><img src="lib/images/kaarten/actiekaarten/bibliotheek.jpg" alt="avonturier" title="avonturier"/></li>
+            <li><img src="lib/images/kaarten/actiekaarten/bureaucraat.jpg" alt="avonturier" title="avonturier"/></li>
+            <li><img src="lib/images/kaarten/actiekaarten/dief.jpg" alt="avonturier" title="avonturier"/></li>
+            <li><img src="lib/images/kaarten/actiekaarten/dorp.jpg" alt="avonturier" title="avonturier"/></li>
+
+            <li><span id="linebreaker"> </span></li>
+
+            <li><img src="lib/images/kaarten/actiekaarten/feest.jpg" alt="avonturier" title="avonturier"/></li>
+            <li><img src="lib/images/kaarten/actiekaarten/festival.jpg" alt="avonturier" title="avonturier"/></li>
+            <li><img src="lib/images/kaarten/actiekaarten/geldverlener.jpg" alt="avonturier" title="avonturier"/></li>
+            <li><img src="lib/images/kaarten/actiekaarten/gracht.jpg" alt="avonturier" title="avonturier"/></li>
+            <li><img src="lib/images/kaarten/actiekaarten/houthakker.jpg" alt="avonturier" title="avonturier"/></li>
         </ul>
-    </div>
 
-    <div class="actiekaarten">
-        <div id="EersteRij">
-            <img src="lib/images/kaarten/actiekaarten/avonturier.jpg" alt="avonturier" title="avonturier"/>
-            <img src="lib/images/kaarten/actiekaarten/bibliotheek.jpg" alt="avonturier" title="avonturier"/>
-            <img src="lib/images/kaarten/actiekaarten/bureaucraat.jpg" alt="avonturier" title="avonturier"/>
-            <img src="lib/images/kaarten/actiekaarten/dief.jpg" alt="avonturier" title="avonturier"/>
-            <img src="lib/images/kaarten/actiekaarten/dorp.jpg" alt="avonturier" title="avonturier"/>
 
-        </div>
-        <div id="TweedeRij">
-            <img src="lib/images/kaarten/actiekaarten/feest.jpg" alt="avonturier" title="avonturier"/>
-            <img src="lib/images/kaarten/actiekaarten/festival.jpg" alt="avonturier" title="avonturier"/>
-            <img src="lib/images/kaarten/actiekaarten/geldverlener.jpg" alt="avonturier" title="avonturier"/>
-            <img src="lib/images/kaarten/actiekaarten/gracht.jpg" alt="avonturier" title="avonturier"/>
-            <img src="lib/images/kaarten/actiekaarten/houthakker.jpg" alt="avonturier" title="avonturier"/>
-
-        </div>
-
-    </div>
 
     <div id="buttons">
-        <button type="button">Gooi je geldkaarten</button>
-        <button type="button">Eindig je beurt</button>
+        <input type="button" value="Gooi alle geldkaarten">
+        <input type="button" value="Eindig je beurt">
     </div>
     <div id="log">
         <h2>Een cursekaart werd toegevoegd aan je deck</h2>
     </div>
-    <div id="abc">
+
+    <div id="persoongegevens">
         <ul>
             <li>|ACTIES: 1</li>
             <li>|BUYS: 2</li>
@@ -63,30 +57,49 @@
         </ul>
 
     </div>
-    <div class="geldcurse">
-        <img src="lib/images/kaarten/geldkaarten/gold.jpg" alt="gold" title="gold">
-        <img src="lib/images/kaarten/geldkaarten/silver.jpg" alt="silver" title="silver">
-        <img src="lib/images/kaarten/geldkaarten/copper.jpg" alt="copper" title="copper">
-        <img src="lib/images/kaarten/overwinningskaarten/curse.jpg" alt="curse" title="curse">
-    </div>
+
+    <ul class="kaartOpVeld">
+        <li><img src="lib/images/kaarten/geldkaarten/gold.jpg" alt="gold" title="gold"></li>
+        <li><img src="lib/images/kaarten/geldkaarten/gold.jpg" alt="gold" title="gold"></li>
+        <li><img src="lib/images/kaarten/geldkaarten/gold.jpg" alt="gold" title="gold"></li>
+        <li><img src="lib/images/kaarten/geldkaarten/gold.jpg" alt="gold" title="gold"></li>
+        <li><img src="lib/images/kaarten/geldkaarten/gold.jpg" alt="gold" title="gold"></li>
+
+    </ul>
+
+
+    <ul class="geldcurse">
+        <li><img src="lib/images/kaarten/geldkaarten/gold.jpg" alt="gold" title="gold"></li>
+        <li><img src="lib/images/kaarten/geldkaarten/silver.jpg" alt="silver" title="silver"></li>
+        <li><img src="lib/images/kaarten/geldkaarten/copper.jpg" alt="copper" title="copper"></li>
+        <li><img src="lib/images/kaarten/overwinningskaarten/curse.jpg" alt="curse" title="curse"></li>
+    </ul>
+
+
     <div id="speler">
         <ul>
             <li><img src="lib/images/dank.png" id="dank" alt="dank" title="dank"></li>
+
             <li>Speler 1</li>
         </ul>
     </div>
+
+    <ul class="hand">
+        <li><p>Hand :</p></li>
+        <li><img src="lib/images/kaarten/geldkaarten/copper.jpg" alt="copper" title="copper"></li>
+        <li><img src="lib/images/kaarten/geldkaarten/copper.jpg" alt="copper" title="copper"></li>
+        <li><img src="lib/images/kaarten/geldkaarten/copper.jpg" alt="copper" title="copper"></li>
+        <li><img src="lib/images/kaarten/overwinningskaarten/estate.jpg" alt="estate" title="estate"></li>
+        <li><img src="lib/images/kaarten/geldkaarten/copper.jpg" alt="copper" title="copper"></li>
+    </ul>
+    <ul class="toonKaart">
+        <li></li>
+    </ul>
+
 </div>
 
-<div class="hand">
-    <img src="lib/images/kaarten/geldkaarten/copper.jpg" alt="copper" title="copper">
-    <img src="lib/images/kaarten/geldkaarten/copper.jpg" alt="copper" title="copper">
-    <img src="lib/images/kaarten/geldkaarten/copper.jpg" alt="copper" title="copper">
-    <img src="lib/images/kaarten/overwinningskaarten/estate.jpg" alt="estate" title="estate"/>
-    <img src="lib/images/kaarten/geldkaarten/copper.jpg" alt="copper" title="copper">
 
-
-</div>
-
-
+<script type="text/javascript" src="lib/js/jquery-2.2.3.min.js"></script>
+<script type="text/javascript" src="lib/js/scriptGame.js"></script>
 </body>
 </html>
